[package]
name = "code_flow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
chardet = "0.2.4"
encoding_rs = "0.8.34"
serde = { version = "1.0.200", features = ["derive"] }
thiserror = "1.0.60"
